#15 footings select options

--- a/src/app/views/deck-quote-edit/dqe-takeoff/dqe-takeoff.component.html
+++ b/src/app/views/deck-quote-edit/dqe-takeoff/dqe-takeoff.component.html
@@ -26,11 +26,14 @@
   <div class="row justify-content-center mb-4">
     <div class="col-4">
       <label class="form-label" for="big-foot-quantity">Quantity</label>
-      <input type="text" class="form-control" id="big-foot-quantity" name="big-foot-quantity">
+      <input type="number" class="form-control" id="big-foot-quantity" name="big-foot-quantity">
     </div>
     <div class="col-4">
-      <label class="form-label" for="big-foot-size">Size</label>
-      <input type="text" class="form-control" id="big-foot-size" name="big-foot-size" value="20x20x20" disabled>
+      <label for="big-foot-size" class="form-label" >Size</label>
+      <select id="big-foot-size" class="form-select">
+        <option>22" x 16.5" x 22"</option>
+        <option>28" x 20" x 28"</option>
+      </select>
     </div>
   </div>
 
@@ -41,11 +44,13 @@
   <div class="row justify-content-center mb-4">
     <div class="col-4">
       <label class="form-label" for="helical-post-quantity">Quantity</label>
-      <input type="text" class="form-control" id="helical-post-quantity" name="helical-post-quantity">
+      <input type="number" class="form-control" id="helical-post-quantity" name="helical-post-quantity">
     </div>
     <div class="col-4">
-      <label class="form-label" for="helical-post-size">Size</label>
-      <input type="text" class="form-control" id="helical-post-size" name="helical-post-size" value="3''x5'" disabled>
+      <label for="helical-post-size" class="form-label">Size</label>
+      <select id="helical-post-size" class="form-select">
+        <option>3" x 5"</option>
+      </select>
     </div>
   </div>
 
@@ -57,11 +62,14 @@
   <div class="row justify-content-center mb-4">
     <div class="col-4">
       <label class="form-label" for="sonotubes-quantity">Quantity</label>
-      <input type="text" class="form-control" id="sonotubes-quantity" name="sonotubes-quantity">
+      <input type="number" class="form-control" id="sonotubes-quantity" name="sonotubes-quantity">
     </div>
     <div class="col-4">
       <label class="form-label" for="sonotubes-size">Size</label>
-      <input type="text" class="form-control" id="sonotubes-size" name="sonotubes-size" value="12''x4'" disabled>
+      <select id="helical-post-size" class="form-select">
+        <option>8" x 48"</option>
+        <option>12" x 48"</option>
+      </select>
     </div>
   </div>
 </div>
