--- a/src/app/views/deck-quote-edit/dqe-takeoff/dqe-takeoff.component.html
+++ b/src/app/views/deck-quote-edit/dqe-takeoff/dqe-takeoff.component.html
@@ -88,8 +88,11 @@
       <li><a class="dropdown-item" href="javascript:;" (click)="addStair()">Stair</a></li>
     </ul>
   </div>
+
   <div class="row">
+    <!-- Area -->
     <div class="col">
+
       <div class="card mb-3" *ngFor="let mainArea of deckingQuote?.deckTakeOff?.layout?.mainAreas; let i = index">
         <div class="card-header d-flex justify-content-between align-items-center">
           <b>Area {{i+1}}</b>
@@ -157,7 +160,7 @@
 
             <div class="d-flex align-items-center mb-3">
               <div class="col-6">
-                <label class="form-label no-margin" for="area-width">Deck Width (FT)</label>
+                <label class="form-label no-margin" for="area-width">Width (FT)</label>
               </div>
               <div class="col">
                 <input type="number" class="form-control no-spinner" id="area-width" [(ngModel)]="mainArea.width">
@@ -166,7 +169,7 @@
 
             <div class="d-flex align-items-center mb-3">
               <div class="col-6">
-                <label class="form-label no-margin" for="area-depth">Deck Depth (FT)</label>
+                <label class="form-label no-margin" for="area-depth">Depth (FT)</label>
               </div>
               <div class="col">
                 <input type="number" class="form-control no-spinner" id="area-depth" [(ngModel)]="mainArea.depth">
@@ -175,7 +178,7 @@
 
             <div class="d-flex align-items-center mb-3">
               <div class="col-6">
-                <label class="form-label no-margin" for="area-height">Deck Height (FT)</label>
+                <label class="form-label no-margin" for="area-height">Height (FT)</label>
               </div>
               <div class="col">
                 <input type="number" class="form-control no-spinner" id="area-height" [(ngModel)]="mainArea.height">
@@ -209,23 +212,25 @@
                   </select>
                 </div>
                 <div class="col-4">
-                  <input type="number" class="form-control no-spinner" id="area-beam-grade-quantity" placeholder="LFT">
+                  <input type="number" class="form-control no-spinner" id="area-beam-grade-quantity" placeholder="Qty">
                 </div>
               </div>
             </div>
-            
+
             <div class="d-flex align-items-center mb-3">
               <div class="col-6">
-                <label class="form-label no-margin" for="area-decking-area">Decking Area (LFT)</label>
+                <label class="form-label no-margin" for="area-decking-area">Decking Area (SF)</label>
               </div>
               <div class="col">
-                <input type="number" class="form-control no-spinner" id="area-decking-area" disabled>
+                <input type="text" class="form-control no-spinner" id="area-decking-area" disabled value="TO CALCULATE">
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Landing Area -->
     <div class="col">
       <div class="card mb-3" *ngFor="let ladingArea of deckingQuote?.deckTakeOff?.layout?.ladingAreas; let i = index">
         <div class="card-header d-flex justify-content-between align-items-center">
@@ -236,9 +241,12 @@
         </div>
         <div class="card-body">
           <div class="row">
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-deck-grade">Deck Grade</label>
+
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label col-form-label" for="land-deck-grade">Deck Grade</label>
+              </div>
+              <div class="col">
                 <select class="form-select" id="land-deck-grade">
                   <option>2x6 Frame</option>
                   <option>2x8 Frame</option>
@@ -247,9 +255,12 @@
                 </select>
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-ledger-board">Ledger Board (LFT)</label>
+
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label col-form-label" for="land-ledger-board">Ledger Board (LFT)</label>
+              </div>
+              <div class="col">
                 <select class="form-select" id="land-ledger-board">
                   <option>2x6 Frame</option>
                   <option>2x8 Frame</option>
@@ -258,73 +269,109 @@
                 </select>
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-ledger-attaches-to">Ledger Attaches to</label>
+
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="land-ledger-attaches-to">Ledger Attaches to</label>
+              </div>
+              <div class="col">
                 <select class="form-select" id="land-ledger-attaches-to">
                   <option>Rim Joist</option>
                   <option>Concrete</option>
                 </select>
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-support-post-grade-size">Support Post Grade (LFT)</label>
-                <div class="input-group mb-3">
-                  <select class="form-select" id="land-support-post-grade-size">
+            
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="land-support-post-grade">Support Post Grade (LFT)</label>
+              </div>
+              <div class="input-group">
+                <div class="col-6">
+                  <select class="form-select" id="land-support-post-grade">
                     <option>4x4</option>
                     <option>6x6</option>
                   </select>
-                  <input type="number" class="form-control no-spinner" id="land-support-post-grade-quantity"
-                    placeholder="Qty">
+                </div>
+                <div class="col">
+                  <input type="number" class="form-control no-spinner" id="land-support-post-grade" placeholder="Ct">
                 </div>
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-width">Width</label>
+            
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="land-width">Width (FT)</label>
+              </div>
+              <div class="col">
                 <input type="number" class="form-control no-spinner" id="land-width" [(ngModel)]="ladingArea.width">
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-depth">Depth</label>
+
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="land-depth">Depth (FT)</label>
+              </div>
+              <div class="col">
                 <input type="number" class="form-control no-spinner" id="land-depth" [(ngModel)]="ladingArea.depth">
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-height">Height</label>
+
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="land-height">Height (FT)</label>
+              </div>
+              <div class="col">
                 <input type="number" class="form-control no-spinner" id="land-height" [(ngModel)]="ladingArea.height">
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-picture-frame">Picture Frame</label>
+            
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="land-picture-frame">Picture Frame (LFT)</label>
+              </div>
+              <div class="col">
                 <input type="number" class="form-control no-spinner" id="land-picture-frame">
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-beam-grade">Beam Grade</label>
-                <div class="input-group mb-3">
+            
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-4">
+                <label class="form-label no-margin" for="land-beam-grade">Beam Grade (LFT)</label>
+              </div>
+              <div class="input-group">
+                <div class="col-8">
                   <select class="form-select" id="land-beam-grade">
-                    <option>Select the Beam</option>
+                    <option>Double by 6</option>
+                    <option>Triple by 6</option>
+                    <option>Double by 8</option>
+                    <option>Triple by 8</option>
+                    <option>Double by 10</option>
+                    <option>Triple by 10</option>
+                    <option>Double by 12</option>
+                    <option>Triple by 12</option>
                   </select>
-                  <input type="number" class="form-control no-spinner" id="land-beam-grade-quantity">
+                </div>
+                <div class="col-4">
+                  <input type="number" class="form-control no-spinner" id="land-beam-grade" placeholder="Qty">
                 </div>
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="land-decking-area">Decking Area</label>
-                <input type="number" class="form-control no-spinner" id="land-decking-area" disabled>
+            
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="land-decking-area">Decking Area (SF)</label>
+              </div>
+              <div class="col">
+                <input type="text" class="form-control no-spinner" id="land-decking-area" disabled value="TO CALCULATE">
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Stair -->
     <div class="col">
       <div class="card mb-3" *ngFor="let stair of deckingQuote?.deckTakeOff?.layout?.stairs; let i = index">
         <div class="card-header d-flex justify-content-between align-items-center">
@@ -335,55 +382,86 @@
         </div>
         <div class="card-body">
           <div class="row">
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="width">Width</label>
-                <input type="number" class="form-control no-spinner" id="width" [(ngModel)]="stair.width">
+
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="stair-width">Width (FT)</label>
+              </div>
+              <div class="col">
+                <input type="number" class="form-control no-spinner" id="stair-width" [(ngModel)]="stair.width">
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="riser">Riser</label>
-                <input type="number" class="form-control no-spinner" id="riser" [(ngModel)]="stair.riser">
+            
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="stair-total-riser">Total Riser (FT)</label>
+              </div>
+              <div class="col">
+                <input type="number" class="form-control no-spinner" id="stair-total-riser" [(ngModel)]="stair.riser">
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="support-post-grade">Support Post Grade</label>
-                <div class="input-group mb-3">
-                  <select class="form-select" id="support-post-grade-size">
+            
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="stair-post-grade-size">Support Post Grade (LFT)</label>
+              </div>
+              <div class="input-group">
+                <div class="col-6">
+                  <select class="form-select" id="stair-post-grade-size">
+                    <option>4x4</option>
                     <option>6x6</option>
                   </select>
-                  <input type="number" class="form-control no-spinner" id="support-post-grade-quantity">
+                </div>
+                <div class="col-6">
+                  <input type="number" class="form-control no-spinner" id="stair-post-grade-qty" placeholder="Ct">
                 </div>
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="beam-grade">Beam Grade</label>
-                <div class="input-group mb-3">
-                  <select class="form-select" id="beam-grade">
-                    <option>Select the Beam</option>
+
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-4">
+                <label class="form-label no-margin" for="stair-beam-grade">Beam Grade (LFT)</label>
+              </div>
+              <div class="input-group">
+                <div class="col-8">
+                  <select class="form-select" id="stair-beam-grade">
+                    <option>Double by 6</option>
+                    <option>Triple by 6</option>
+                    <option>Double by 8</option>
+                    <option>Triple by 8</option>
+                    <option>Double by 10</option>
+                    <option>Triple by 10</option>
+                    <option>Double by 12</option>
+                    <option>Triple by 12</option>
                   </select>
-                  <input type="number" class="form-control no-spinner" id="beam-grade-quantity">
+                </div>
+                <div class="col-4">
+                  <input type="number" class="form-control no-spinner" id="stair-beam-grade-quantity" placeholder="Qty">
                 </div>
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="railing-both-sides">Railings on Both Sides?</label>
-                <select class="form-select" id="railing-both-sides">
-                  <option>Select...</option>
+            
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-6">
+                <label class="form-label no-margin" for="stair-railing-both-sides">Railings on:</label>
+              </div>
+              <div class="col">
+                <select class="form-select" id="stair-railing-both-sides">
+                  <option>One side</option>
+                  <option>Both sides</option>
                 </select>
               </div>
             </div>
-            <div class="col-12">
-              <div class="mb-3">
-                <label class="form-label" for="beam-grade">Hand Rail</label>
-                <div class="input-group mb-3">
-                  <input type="number" class="form-control no-spinner" id="hand-rail">
-                  <input type="number" class="form-control no-spinner" id="hand-rail">
-                  <input type="number" class="form-control no-spinner" id="hand-rail">
+
+            <div class="d-flex align-items-center mb-3">
+              <div class="col-4">
+                <label class="form-label no-margin" for="stair-hand-rail">Hand Rail</label>
+              </div>
+              <div class="col">
+                <div class="input-group">
+                  <input type="number" class="form-control no-spinner" placeholder="LF" disabled>
+                  <input type="number" class="form-control no-spinner" placeholder="risers" disabled>
+                  <input type="number" class="form-control no-spinner" placeholder="treads" disabled>
                 </div>
               </div>
             </div>
