--- a/src/app/views/deck-quote-edit/deck-quote-edit.component.html
+++ b/src/app/views/deck-quote-edit/deck-quote-edit.component.html
@@ -6,16 +6,16 @@
 
   <!-- Main Menu -->
   <nav class="nav nav-tabs" id="deck-tab">
-    <a class="nav-link active" type="button" data-bs-toggle="tab" data-bs-target="#customer-info" (click)="setActiveTab('customer-info')">Job Info</a>
-    <a class="nav-link " type="button" data-bs-toggle="tab" data-bs-target="#deck-take-off" (click)="setActiveTab('deck-take-off')">Deck Take-off</a>
-    <a class="nav-link " type="button" data-bs-toggle="tab" data-bs-target="#estimate" (click)="setActiveTab('estimate')" >Estimate</a>
-    <a class="nav-link " type="button" data-bs-toggle="tab" data-bs-target="#material-order" (click)="setActiveTab('material-order')">Material Order</a>
+    <a class="nav-link " type="button" data-bs-toggle="tab" data-bs-target="#customer-info">Job Info</a>
+    <a class="nav-link active" type="button" data-bs-toggle="tab" data-bs-target="#deck-take-off">Deck Take-off</a>
+    <a class="nav-link " type="button" data-bs-toggle="tab" data-bs-target="#estimate"
+      (click)="runEstimate()">Estimate</a>
+    <a class="nav-link " type="button" data-bs-toggle="tab" data-bs-target="#material-order">Material Order</a>
   </nav>
 </div>
 
 <div class="d-flex mb-3">
-  <p class=" flex-fill  fs-6 ">{{customer.lastName}}, {{customer.firstName}} - {{ deckingQuote?.jobAddress }}</p>
-  <button *ngIf="activeTab === 'deck-take-off'" class="btn btn-outline-primary m-2">Estimate</button>
+  <p class="flex-fill fs-6 ">{{customer.lastName}}, {{customer.firstName}} - {{ deckingQuote?.jobAddress }}</p>
   <button class="btn btn-primary m-2" (click)="save()">
     <i class="bi bi-save"></i>
     Save
@@ -29,7 +29,7 @@
   <div class="tab-pane show active" id="customer-info">
     <app-dqe-customer [customer]="customer" [deckQuote]="deckingQuote"
       *ngIf="customer && deckingQuote"></app-dqe-customer>
-    <!-- <pre>{{ deckQuote | json }}</pre> -->
+    <!-- <pre>{{ deckingQuote | json }}</pre> -->
   </div>
 
   <!-- Deck Take-off -->
@@ -39,7 +39,7 @@
 
   <!-- Estimate -->
   <div class="tab-pane " id="estimate">
-    <app-dqe-estimate [customer]="customer" [deckingQuote]="deckingQuote" *ngIf="deckingQuote"></app-dqe-estimate>
+    <app-dqe-estimate [deckingQuote]="deckingQuote" [customer]="customer" *ngIf="deckingQuote"></app-dqe-estimate>
   </div>
 
   <!-- Material Order -->
