--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -49,7 +49,9 @@
       <td class="d-flex">
         <!-- Button Edit -->
         <button class="btn btn-outline-primary btn-sm me-2" title="Edit"
-          [routerLink]="[ '/customers', quote.customerId ,'quotes', quote.id ]">
+        [routerLink]="[ '/quotes', quote.type?.toLowerCase(), quote.id ]"
+        [queryParams]="{ customerId: quote.customerId }">
+          <!-- [routerLink]="[ '/customers', quote.customerId ,'quotes', quote.id ]"> -->
           <i class="bi bi-pencil-fill"></i>
         </button>
 
