fix: remove calculate button

--- a/src/app/decking-quotes/decking-quote-edit/dqe-estimate/dqe-estimate.component.html
+++ b/src/app/decking-quotes/decking-quote-edit/dqe-estimate/dqe-estimate.component.html
@@ -10,8 +10,8 @@
           [class.btn-light]="menu != 'x-y view'"
           (click)="menu = 'x-y view'">(X - Y) View</button>
 
-  <button class="btn btn-primary m-2"
-  (click)="calculateMaterialCosts()">Calculate</button>
+  <!-- <button class="btn btn-primary m-2"
+          (click)="calculateMaterialCosts()">Calculate</button> -->
 </div>
 
 <div class="d-flex flex-column mb-3"
