fix: update nomenclature

--- a/src/app/decking-quotes/decking-quote-edit/dqe-take-off/dqe-take-off-layout/dqe-take-off-layout.component.html
+++ b/src/app/decking-quotes/decking-quote-edit/dqe-take-off/dqe-take-off-layout/dqe-take-off-layout.component.html
@@ -74,7 +74,7 @@
                                 <input type="number"
                                        class="form-control no-spinner"
                                        id="area-support-post-grade"
-                                       placeholder="Ct"
+                                       placeholder="Length"
                                        [(ngModel)]="mainArea.ledgerBoard.qty">
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                                 <input type="number"
                                        class="form-control no-spinner"
                                        id="area-beam-grade-quantity"
-                                       placeholder="Qty"
+                                       placeholder="Length"
                                        [(ngModel)]="mainArea.beamGrade.qty">
                             </div>
                         </div>
@@ -459,7 +459,7 @@
                     <div class="d-flex align-items-center mb-3">
                         <div class="col-6">
                             <label class="form-label no-margin"
-                                   for="stair-beam-grade">Beam Grade (LFT)</label>
+                                   for="stair-beam-grade">Beam for stair?</label>
                         </div>
                         <div class="col">
                             <input type="checkbox"
