feat: Add login component #31

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -23,8 +23,12 @@
         <ul class="dropdown-menu">
           <li><a class="dropdown-item"
                routerLink="/materials">Materials</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><h6 class="dropdown-header">Material Orders</h6></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li>
+            <h6 class="dropdown-header">Material Orders</h6>
+          </li>
           <li><a class="dropdown-item"
                routerLink="/material-orders/decking/footings">Footings</a></li>
           <li><a class="dropdown-item"
@@ -40,7 +44,8 @@
         <button type="button" class="btn btn-outline-primary me-2">
           Sing in
         </button> -->
-      <button class="btn btn-link">
+      <button class="btn btn-link"
+              routerLink="/login">
         <i class="fs-5 bi bi-person-fill"></i>
       </button>
     </div>
